# DataChallenge_2024

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: loader.py  paths.py
data/processed/: scaler_reg.joblib  y_test_cls.csv  y_test_reg_with_winsorzing.csv  y_train_cls.csv  y_val_cls.csv  y_val_reg_with_winsorzing.csv
data/processed/avance3/: y_test_cls_new.csv  y_test_reg_new.csv
models/: LightGBM.py  NGBoost_F2.py  NGBoost_F4.py  evaluator.py  random_forest_model.py  xgboost_models.py
output/: predicciones_test.csv
preprocessing/: data-preprocessing.ipynb
utils/: plotter.py
